# fastapi-kafka

app/: config.py  main.py  pyproject.toml  router.py  test.py
kafka/: docker-compose.yml
